--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,12 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     // testImplementation 'com.codeborne:selenide:5.19.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
 }
 
 test {
     useJUnitPlatform()
     // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM
     // (где его подтянет Selenide)
-    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    //systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
