--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,4 +8,5 @@ install:
   - java -jar src/test/java/artifacts/app-order.jar &
 build_script:
   - chmod +x gradlew
+  - ./gradlew clean jar
   - ./gradlew test --info
