--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,5 +8,5 @@ install:
   - java -jar src/test/java/artifacts/app-order.jar &
 build_script:
   - chmod +x gradlew
-  - chmod 755 /driver/win/chromedriver
+  - chmod 755 driver/win/chromedriver.exe
   - ./gradlew test --info
